RESOLVED FIXED96320
NSInvalidArgumentException in WebFrameLoaderClient::shouldSendDoNotTrackHTTPHeader()
https://bugs.webkit.org/show_bug.cgi?id=96320
Summary NSInvalidArgumentException in WebFrameLoaderClient::shouldSendDoNotTrackHTTPH...
Jer Noble
Reported 2012-09-10 14:40:54 PDT
Crash in WebFrameLoaderClient::shouldSendDoNotTrackHTTPHeader()
Attachments
Patch (4.01 KB, patch)
2012-09-10 14:43 PDT, Jer Noble
ggaren: review+
Jer Noble
Comment 1 2012-09-10 14:43:57 PDT
Jer Noble
Comment 2 2012-09-10 14:46:01 PDT
ASSERT is happening because the ResourceLoadDelegate does not respond to the delegate selector webViewShouldSendDoNotTrackHeader:.
Jer Noble
Comment 3 2012-09-10 14:46:50 PDT
Sorry, not an ASSERT either, but rather a NSInvalidArgumentException.
Geoffrey Garen
Comment 4 2012-09-10 14:50:11 PDT
Comment on attachment 163211 [details] Patch r=me
Jer Noble
Comment 5 2012-09-10 14:52:06 PDT
Note You need to log in before you can comment on or make changes to this bug.