NSInvalidArgumentException in WebFrameLoaderClient::shouldSendDoNotTrackHTTPHeader() https://bugs.webkit.org/show_bug.cgi?id=96320

Reviewed by Geoffrey Garen.

Client was being cached as the FrameLoaderClient, but requests were sent to the ResourceLoadClient.

* WebCoreSupport/WebFrameLoaderClient.mm:
(WebFrameLoaderClient::shouldSendDoNotTrackHTTPHeader): Send the request to the FrameLoadDelegate.
* WebView/WebDelegateImplementationCaching.h:
* WebView/WebDelegateImplementationCaching.mm:
(CallFrameLoadDelegateReturningBoolean): Added.

Canonical link: https://commits.webkit.org/114205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128112 268f45cc-cd09-0410-ab3c-d52691b4dbfc